# Facial-recognition

./: CMakeLists.txt  README.md  build  main.cpp  matrix.h
src/: main.cpp
src/tests/: main_tests.cpp  test_image.h  test_matrix.cpp  test_matrix.h
src/utils/: image.h  matrix.h  pca.h
